第三个版本

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,17 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/product.js"></script>
+        <script src="scripts/controllers/news.js"></script>
+        <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/case.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
+        <script src="scripts/controllers/family.js"></script>
+        <script src="scripts/controllers/fever.js"></script>
+        <script src="scripts/controllers/screen.js"></script>
+        <script src="scripts/controllers/meeting.js"></script>
+        <script src="scripts/controllers/information.js"></script>
+        <script src="scripts/controllers/dynamic.js"></script>
         <!-- endbuild -->
          <!--<div class="nav">
     	<ul>
