第六个版本

--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,7 @@
 			</div>
 
 			
-			<div ui-view="" style="border: 1px solid black;width: 100%;height: auto;">
+			<div ui-view="" style="border: 1px solid black;width: 100%;height: auto;margin-top: 80px;">
 				
 			</div>
 			<div class="index-footer">
