--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/fever.css" />
 		<link rel="stylesheet" type="text/css" href="styles/information.css" />
 		<link rel="stylesheet" type="text/css" href="styles/meeting.css" />
+		<link rel="stylesheet" type="text/css" href="styles/news.css" />
 		<link rel="stylesheet" type="text/css" href="styles/product.css" />
 		<link rel="stylesheet" type="text/css" href="styles/screen.css" />
 		<!-- endbuild -->
