--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
 		<script src="scripts/app.js"></script>
 		<script src="scripts/controllers/main.js"></script>
 		<script src="scripts/controllers/product.js"></script>
-		<script src="scripts/controllers/news.js"></script>
+		<!--<script src="scripts/controllers/news.js"></script>-->
 		<script src="scripts/controllers/about.js"></script>
 		<script src="scripts/controllers/case.js"></script>
 		<script src="scripts/controllers/contact.js"></script>
@@ -67,8 +67,8 @@
 		<script src="scripts/controllers/fever.js"></script>
 		<script src="scripts/controllers/screen.js"></script>
 		<script src="scripts/controllers/meeting.js"></script>
-		<script src="scripts/controllers/information.js"></script>
-		<script src="scripts/controllers/dynamic.js"></script>
+		<!--<script src="scripts/controllers/information.js"></script>
+		<script src="scripts/controllers/dynamic.js"></script>-->
 		<script src="scripts/controllers/index.js" type="text/javascript" charset="utf-8"></script>
 		<!-- endbuild -->
 		<!--<div class="nav">
